--- a/Day06/package.json
+++ b/Day06/package.json
@@ -20,6 +20,7 @@
     "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-scroll-area": "^1.2.2",
     "@radix-ui/react-select": "^2.1.4",
+    "@radix-ui/react-separator": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.1",
     "@sanity/icons": "^3.5.7",
     "@sanity/image-url": "^1.1.0",
@@ -36,6 +37,7 @@
     "react-toastify": "^11.0.3",
     "sanity": "^3.70.0",
     "shipengine": "^1.0.7",
+    "stripe": "^17.6.0",
     "styled-components": "^6.1.14",
     "svix": "^1.45.1",
     "tailwind-merge": "^2.5.5",
